# rust-esp32cam

./: .gitmodules  Cargo.toml  README.md  diagram.json  sdkconfig.defaults  wokwi.toml
src/: camera.rs  main.rs  wifi.rs
