[package]
name = "tigercam"
version = "0.1.0"
authors = ["tigercat2000 <nick.pilant2@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native", "experimental", "nightly"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
anyhow = "1.0.75"
toml-cfg = "0.1.3"

[build-dependencies]
embuild = "0.31.3"

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "cam_bindings.h"
bindings_module = "cam"
remote_component = { name = "espressif/esp32-camera", version = "2.0.6" }
