[package]
name = "tigercam"
version = "0.1.0"
authors = ["tigercat2000 <nick.pilant2@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false, features = [
    "native",
    "std",
    "binstart",
    "alloc",
    "nightly",
    "experimental",
    "embassy-sync",
    "critical-section",
    "embassy-time-driver",
] }
anyhow = "1.0.75"
toml-cfg = "0.1.3"
edge-executor = "0.4.1"
embedded-hal-async = "1.0.0-rc.1"
esp-camera-rs = { path = "esp-camera-rs" }

[build-dependencies]
embuild = "0.31.3"

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "cam_bindings.h"
bindings_module = "cam"
remote_component = { name = "espressif/esp32-camera", version = "2.0.6" }

[patch.crates-io]
crossbeam-utils = { path = "crossbeam/crossbeam-utils" }
